# vigir_launch

./: README
flor_qual_task_1/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
flor_qual_task_1/launch/: start_ocs.launch
vigir_atlas_bringup/: mainpage.dox  manifest.xml
vigir_common_launch/: CMakeLists.txt  package.xml
vigir_common_launch/launch/: common_parameters.launch  robot_description.launch
vigir_ihmc_real_launch/: CMakeLists.txt  package.xml
vigir_ihmc_sim_launch/: CMakeLists.txt  package.xml
vigir_image_processing/: CMakeLists.txt  manifest.xml  package.xml
vigir_image_processing/launch/: crop_decimate_common_setup.launch  crop_decimate_nodelet.launch  debug_onboard_crop_decimate_nodelets.launch  image_full_decimate_nodelet.launch  onboard_crop_decimate_nodelets.launch  relay_crop_decimate_without_comms_bridge.launch  relay_multisense_crop_decimate_without_comms_bridge.launch  relay_palm_camera_crop_decimate_without_comms_bridge.launch  relay_sa_camera_crop_decimate_without_comms_bridge.launch
vigir_image_rotate_ocs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
vigir_image_rotate_ocs/cfg/: sandia_left_image_rotate_ocs.yaml
vigir_image_rotate_ocs/launch/: vigir_image_rotate_ocs_default.launch  vigir_image_rotate_ocs_direct_cam_image.launch
vigir_lidar_processing/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
vigir_lidar_processing/launch/: lidar_processing.launch  octomapping.launch  octomapping_large.launch
vigir_ocs/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
vigir_ocs/config/: atlas_camera_topics.yaml  l_robotiq_camera_topics.yaml  r_robotiq_camera_topics.yaml  r_sandia_camera_topics.yaml  r_stump_camera_topics.yaml
vigir_ocs/launch/: atlas_camera_topics.yaml  frodo.launch  l_checkerboard_vigir_ocs_nodelets.launch  l_hook_vigir_ocs_nodelets.launch  l_irobot_vigir_ocs_nodelets.launch  l_irobot_with_extension_vigir_ocs_nodelets.launch  l_robotiq_camera_topics.yaml  l_robotiq_grasp_widget.launch  l_robotiq_vigir_ocs_nodelets.launch  l_sandia_camera_topics.yaml  l_sandia_vigir_ocs_nodelets.launch  l_stump_vigir_ocs_nodelets.launch  ocs_logging.launch  r_hook_camera_topics.yaml  r_irobot_grasp_widget.launch  r_irobot_vigir_ocs_nodelets.launch  r_irobot_with_extension_vigir_ocs_nodelets.launch  r_payload_vigir_ocs_nodelets.launch  r_robotiq_camera_topics.yaml  r_robotiq_vigir_ocs_nodelets.launch  r_sandia_vigir_ocs_nodelets.launch  r_stump_vigir_ocs_nodelets.launch  status_window.launch  template_interactive_marker_servers.launch  test_stand_prep.launch  vigir_aux_ui.launch  vigir_desktop_recorder.launch  vigir_desktop_recorder_vigir.launch  vigir_immersive_ocs.launch  vigir_main_ui.launch  vigir_main_ui_drc.launch  vigir_main_ui_irobot.launch  vigir_main_ui_irobot_drc.launch  vigir_main_ui_reduced_config.launch  vigir_main_ui_sandia.launch  vigir_minimal_ocs.launch  vigir_minimal_ocs_and_nodelets.launch  vigir_ocs.launch  vigir_ocs_behavior.launch  vigir_ocs_behavior_only.launch  (+18 more)
vigir_ocs/launch/common/: common_parameter_setup.launch
vigir_ocs/launch/grasp_widget/: l_irobot_grasp_widget.launch  l_sandia_grasp_widget.launch  r_robotiq_grasp_widget.launch  r_sandia_grasp_widget.launch
vigir_ocs/launch/nodelets/: l_hook_vigir_ocs_nodelets.launch  l_irobot_vigir_ocs_nodelets.launch  l_payload_vigir_ocs_nodelets.launch  l_robotiq_vigir_ocs_nodelets.launch  l_sandia_vigir_ocs_nodelets.launch  l_stump_vigir_ocs_nodelets.launch  r_hook_vigir_ocs_nodelets.launch  r_irobot_with_extension_vigir_ocs_nodelets.launch  r_robotiq_vigir_ocs_nodelets.launch  r_stump_vigir_ocs_nodelets.launch
vigir_ocs/rviz/: ocs_default.rviz
vigir_onboard/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
vigir_onboard/launch/: cloudsim_fc1.launch  cloudsim_fc2.launch  cloudsim_logging.launch  drc_aragorn.launch  drc_aragorn_sim.launch  grasp_controllers.launch  irobot_grasp_controllers.launch  motion.launch  moveit_planning.launch  onboard_logging.launch  onboard_logging_2.launch  onboard_logging_controller_test.launch  onboard_logging_finals.launch  perception.launch  vigir_onboard.launch  vigir_onboard_atlas.launch  vigir_onboard_fc1.launch  vigir_onboard_fc2.launch  vigir_onboard_fc3.launch  vigir_onboard_sim.launch  vigir_status_relay.launch
vigir_onboard_gazebo/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
vigir_onboard_gazebo/launch/: onboard_all.launch  onboard_perception_gazebo.launch  robot_controller.launch  run_controller.launch
vigir_onboard_machines/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
vigir_onboard_machines/launch/: atlas_log_downloader.py  basic_controller_setup.launch  onboard_aragorn.launch  onboard_legolas.launch  onboard_sam.launch  robot_supervisor.launch  supervisor_logging.launch
vigir_robot_spawn/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
vigir_robot_spawn/launch/: atlas_default.launch
vigir_sim_test_1/: CMakeLists.txt  (+3 more)
vigir_sim_test_2/: CMakeLists.txt  manifest.xml  package.xml
vigir_sim_test_2/launch/: image_crop_decimate.launch  octomap_mapping_lidar_world_frame.launch
vigir_state_estimation/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
vigir_state_estimation/launch/: state_estimation.launch
vigir_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
vigir_teleop/launch/: teleop_walk_keyboard.launch
vigir_test_combined/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  test_planning_with_ui.launch
vigir_test_combined/launch/: calibration_test_with_ui.launch  moveit_planning_test_with_ui.launch  test_open_loop_motions.launch
vigir_test_ocs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
vigir_test_ocs/launch/: inv_reach.launch  moveit_planning_ui.launch  moveit_planning_with_joint_state_publisher.launch  test_ghost_robot.launch  test_grasping_ui.launch  test_ocs_reduced_config.launch  test_open_loop_motions.launch  test_razer_ocs_reduced_config.launch  test_supervisor.launch  test_template_poses.launch
vigir_test_ocs/rviz/: manipulability_vis_test.rviz
(+21 files in other folders)
