<package>
  <name>vigir_image_processing</name>
  <version>0.0.1</version>
  <description>
     vigir_image_processing
  </description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/vigir_image_processing</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>vigir_crop_decimate_nodelet</run_depend>
</package>
