<package>
  <name>vigir_lidar_processing</name>
  <version>0.0.1</version>
  <description>
     vigir_lidar_processing
  </description>
  <maintainer email="conner@torcrobotics.com">David Conner</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/vigir_lidar_processing</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>vigir_filtered_localized_scan_utils</build_depend>
  <run_depend>vigir_filtered_localized_scan_utils</run_depend>
</package>
