<package>
  <name>vigir_onboard</name>
  <version>0.0.1</version>
  <description>
     vigir_onboard
  </description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/vigir_onboard</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>vigir_lidar_processing</run_depend>
  <run_depend>vigir_state_estimation</run_depend>
  <run_depend>vigir_image_processing</run_depend>
  <run_depend>vigir_worldmodel_main</run_depend>
  <run_depend>vigir_footstep_planner</run_depend>
</package>
