<package>
  <name>vigir_onboard_gazebo</name>
  <version>0.0.1</version>
  <description>
     vigir_onboard_gazebo
  </description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/vigir_onboard_gazebo</url>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
