<package>
  <name>vigir_onboard_machines</name>
  <version>0.0.1</version>
  <description>
     vigir_onboard_machines
  </description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/vigir_onboard_machines</url>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
