<package>
  <name>vigir_robot_spawn</name>
  <version>0.0.1</version>
  <description>
     vigir_robot_spawn provides launch files for spawning different variants of the robot model
  </description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/vigir_robot_spawn</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>atlas</run_depend>
</package>
