<package>
  <name>vigir_sim_test_2</name>
  <version>0.0.1</version>
  <description>
     Contains launch files related to Sim Test 2 testing
  </description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/vigir_sim_test_2</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>vigir_crop_decimate_nodelet</run_depend>
  <run_depend>message_to_tf</run_depend>
  <run_depend>octomap_server</run_depend>
  <run_depend>hector_laserscan_to_pointcloud</run_depend>
  <run_depend>vigir_joint_controller</run_depend>
</package>
