<package>
  <name>vigir_teleop</name>
  <version>0.0.1</version>
  <description>
     vigir_teleop
  </description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/vigir_teleop</url>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
