<package>
  <name>vigir_test_combined</name>
  <version>0.0.1</version>
  <description>
     vigir_test_combined
  </description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/vigir_test_combined</url>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
