<package>
  <name>vigir_test_ocs</name>
  <version>0.0.1</version>
  <description>
     vigir_test_ocs
  </description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/vigir_test_ocs</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>vigir_ocs</run_depend>
</package>
